<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/md_theme_light_primaryContainer"
    android:orientation="vertical"
    tools:context=".Capitulos">

    <TextView
        android:id="@+id/indice"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/indice"
        android:textAlignment="center"
        android:textSize="48sp" />

    <Button
        android:id="@+id/capitulo1"
        android:layout_marginTop="20dp"
        style="@style/Widget.Material3.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/capitulo1"
        android:textSize="20sp" />

    <Button
        android:id="@+id/capitulo2"
        style="@style/Widget.Material3.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/capitulo2"
        android:textSize="20sp" />

    <Button
        android:id="@+id/capitulo3"
        style="@style/Widget.Material3.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/capitulo3"
        android:textSize="20sp" />

</LinearLayout>