<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/Initial"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/md_theme_light_onPrimaryContainer"
    android:orientation="vertical">


    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="85dp"
        android:text="@string/appTitle"
        android:textAlignment="center"
        android:textColor="@color/md_theme_light_background"
        android:textSize="48sp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="273dp"
        android:layout_height="134dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:layout_marginStart="65dp"
        android:layout_marginBottom="293dp"
        android:text="@string/descri"
        android:textAlignment="center"
        android:textColor="@color/md_theme_light_background"
        android:textSize="30sp" />

    <Button
        android:id="@+id/Avancar"
        android:layout_width="178dp"
        android:layout_height="80dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="144dp"
        android:text="@string/capitulos" />

    <Button
        android:id="@+id/Desenvolvedores"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="58dp"
        android:text="@string/devsButton" />
</RelativeLayout>